[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[project]
name = "report_racing_app"
version = "0.1.0"
authors = [
  { name="Hryhorii", email="rovniygrishaaa@gmail.com" },
]
description = "A Python package for the Formula 1 Monaco Racing Report Generator"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

